# greycat-analyzer

./: .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  Cargo.toml  FOLLOWUP.md  LICENSE-MIT  README.md  ROADMAP.md  TODO.md  package.json  pnpm-lock.yaml  project.gcl
crates/analysis/: Cargo.toml
crates/analysis/src/: analyzer.rs  conv.rs  display.rs  erasure.rs  index.rs  pragmas.rs
crates/ffi/: Cargo.toml
crates/syntax/: Cargo.toml  build.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: format_round_trip.rs  hir_lower.rs  parser.rs
greycat-analyzer/: Cargo.toml
greycat-analyzer-analysis/: Cargo.toml
greycat-analyzer-analysis/src/: actions.rs  analyzer.rs  annotation_validate.rs  conv.rs  directives.rs  display.rs  erasure.rs  index.rs  lib.rs  lint.rs  lower_type_ref.rs  parallel.rs  pragmas.rs  project.rs  quickfix.rs  reachability.rs  rename.rs  resolver.rs  return_inference.rs  stdlib.rs  well_known.rs
greycat-analyzer-analysis/tests/: array_literal_inference.rs  catch_param_type.rs  cross_module_ambiguous_symbol.rs  cross_module_fn_value.rs  cross_module_generic_cast.rs  cross_module_private_fallback.rs  cross_module_private_visibility.rs  cross_module_return_self_type.rs  cross_module_subtype.rs  cross_module_type_to_generic_supertype.rs  dead_conditional_fix.rs  decidable_conditions.rs  decl_namespace.rs  duplicate_module_name.rs  generic_arity.rs  generic_erasure.rs  generic_inference_unified.rs  generic_method_subst.rs  generic_return_typing.rs  generics_arity_limit.rs  infer_return_type.rs  inherited_generic_member_subst.rs  instance_access_static_shadow.rs  invalid_pragma_arg.rs  is_narrow_member_path.rs  keyword_stmt_byte_range.rs  library_eviction.rs  lint_pragmas.rs  literal_overflow.rs  loop_condition_narrow.rs  loop_post_exit_narrow.rs  missing_return.rs  no_breakpoint.rs  node_tag_variance.rs  object_construction_shape.rs  object_field_type_mismatch.rs  post_if_else_with_throw_reassign.rs  post_if_lift_under_null_guard.rs  post_if_nullable_reassign_join.rs  private_attr_write.rs  (+5 more)
greycat-analyzer-core/: Cargo.toml
greycat-analyzer-core/src/: ast.rs  conv.rs  cst.rs  cst2.rs  diagnostics.rs  doc.rs  fmt.rs  lexer.rs  lib.rs  manager.rs  module_desc.rs  parser.rs  registry.rs  resolver.rs  span.rs  symbols.rs  type_arena.rs  types.rs  wasm.rs
greycat-analyzer-core/tests/: subtyping_gauntlet.rs
greycat-analyzer-fmt/: Cargo.toml
greycat-analyzer-fmt/src/: directives.rs  doc.rs  lib.rs  lower.rs  render.rs  trivia.rs
greycat-analyzer-fmt/tests/: breakpoint_stmt.rs  parity_gauntlet.rs  stdlib_parity.rs
greycat-analyzer-hir/: Cargo.toml
greycat-analyzer-hir/src/: arena.rs  decl.rs  hir.rs  lib.rs  lower.rs  types.rs
greycat-analyzer-hir/tests/: breakpoint_stmt.rs  corpus.rs  top_level_expr.rs  typed_literals.rs  unary_ops.rs  unsupported_audit.rs
greycat-analyzer-ls/: Cargo.toml
greycat-analyzer-ls/src/: backend.rs  capabilities.rs  document.rs  lang_server.rs  lib.rs  project.rs  server.rs
greycat-analyzer-ls/tests/: capabilities.rs  lsp_capabilities.rs
greycat-analyzer-server/: Cargo.toml
greycat-analyzer-server/src/: backend.rs  capabilities.rs  conv.rs  lib.rs  registry.rs  server.rs  watcher.rs
greycat-analyzer-server/tests/: capabilities.rs  completion_inheritance.rs  document_sync.rs  goto_declaration.rs  goto_definition_cross_module.rs  goto_implementation_subtype.rs  kopr_lsp_stress.rs  lsp_capabilities.rs
greycat-analyzer-syntax/: Cargo.toml  build.rs
greycat-analyzer-syntax/snapshots/: parser_fixtures__args_split__out.snap  parser_fixtures__args_trailing_comma_force_multiline__in.snap  parser_fixtures__args_trailing_comma_force_multiline__out.snap  parser_fixtures__arrow_call_glues_to_receiver__in.snap  parser_fixtures__arrow_call_object_arg__in.snap  parser_fixtures__arrow_call_object_arg__out.snap  parser_fixtures__assign_long_object_no_extra_indent__in.snap  parser_fixtures__assign_long_object_no_extra_indent__out.snap  parser_fixtures__binary_chain_additive__out.snap  parser_fixtures__binary_chain_nullish__in.snap  parser_fixtures__binary_chain_nullish__out.snap  parser_fixtures__cast_as_glued_on_chain_wrap__in.snap  parser_fixtures__cast_as_glued_on_chain_wrap__out.snap  parser_fixtures__cast_as_glued_on_paren_wrap__in.snap  parser_fixtures__cast_as_glued_on_paren_wrap__out.snap  parser_fixtures__chain_call_node_wrapped_object__in.snap  parser_fixtures__chain_method_call__in.snap  parser_fixtures__do_while_chain_close_paren_own_line__in.snap  parser_fixtures__doc_eol_stmt__in.snap  parser_fixtures__doc_eol_stmt__out.snap  parser_fixtures__eol_comment_block_stmt__in.snap  parser_fixtures__eol_comment_module_level__in.snap  parser_fixtures__eol_comment_module_level__out.snap  parser_fixtures__eol_comment_spaced__out.snap  parser_fixtures__fn_params_inline_block_comment__out.snap  parser_fixtures__fn_params_inline_comment_break__out.snap  parser_fixtures__for_c_long_header__in.snap  parser_fixtures__for_c_long_header__out.snap  parser_fixtures__for_in_clauses_any_order__out.snap  parser_fixtures__for_in_long_header__in.snap  parser_fixtures__for_in_long_header__out.snap  parser_fixtures__for_in_range__in.snap  parser_fixtures__for_in_range__out.snap  parser_fixtures__if_call_paren_wrap__out.snap  parser_fixtures__if_long_or_chain__in.snap  parser_fixtures__if_mixed_and_or__in.snap  parser_fixtures__if_mixed_and_or__out.snap  parser_fixtures__if_var_object__in.snap  parser_fixtures__if_var_object__out.snap  parser_fixtures__inline_type__out.snap  (+22 more)
greycat-analyzer-syntax/src/: cst.rs  lib.rs
greycat-analyzer-syntax/tests/: coverage.rs  snapshot.rs
greycat-analyzer-types/: Cargo.toml
greycat-analyzer-types/src/: lib.rs
greycat-analyzer-types/tests/: subtyping_gauntlet.rs
greycat-analyzer-wasm/: .gitignore  Cargo.toml  global.d.ts  index.css  index.html  index.js  package.json  pnpm-lock.yaml
greycat-analyzer-wasm/src/: lib.rs  playground.rs  project.rs
greycat-analyzer/src/: cmd.rs  main.rs  utils.rs
greycat-analyzer/tests/: lsp_multi_project.rs  lsp_smoke.rs  solarleb_fix.rs
(+390 files in other folders)
