[package]
name = "greycat-analyzer-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
greycat-analyzer-syntax = { path = "../greycat-analyzer-syntax" }
greycat-analyzer-hir = { path = "../greycat-analyzer-hir" }
greycat-analyzer-analysis = { path = "../greycat-analyzer-analysis" }
greycat-analyzer-fmt = { path = "../greycat-analyzer-fmt" }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hir_lower"
path = "fuzz_targets/hir_lower.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_round_trip"
path = "fuzz_targets/format_round_trip.rs"
test = false
doc = false
bench = false
