[package]
name = "greycat-analyzer-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-types.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-syntax.workspace = true

[dev-dependencies]
greycat-analyzer-syntax.workspace = true
