[package]
name = "greycat-analyzer-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# P26 — exploration branch. Enables rayon-driven parallelism on the
# stage_lower / run_typed_lints / resolver / S12 paths. Off by default.
parallel = ["dep:rayon"]

[dependencies]
greycat-analyzer-types.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-syntax.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
greycat-analyzer-syntax.workspace = true
