[package]
name = "greycat-analyzer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log = "0.4.27"
lsp-types = "0.97.0"
line-index = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
md5 = "0.8.0"
thiserror = "2"
tree-sitter = "0.26"
greycat-analyzer-syntax = { path = "../greycat-analyzer-syntax", version = "0.1.0" }
