[package]
name = "greycat-analyzer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-syntax.workspace = true

line-index.workspace = true
log.workspace = true
lsp-types.workspace = true
md5.workspace = true
serde.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
