[package]
name = "greycat-analyzer-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-syntax = { path = "../greycat-analyzer-syntax", version = "0.1.0" }
