[package]
name = "greycat-analyzer-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-syntax = { path = "../greycat-analyzer-syntax", version = "0.1.0" }
greycat-analyzer-core = { path = "../greycat-analyzer-core", version = "0.1.0" }

[dev-dependencies]
greycat-analyzer-syntax = { path = "../greycat-analyzer-syntax", version = "0.1.0" }
