[package]
name = "greycat-analyzer-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-syntax.workspace = true
greycat-analyzer-core.workspace = true

[dev-dependencies]
greycat-analyzer-syntax.workspace = true
