[package]
name = "greycat-analyzer-ls"
version = "0.1.0"
edition = "2024"

[dependencies]
greycat-analyzer-core = { path = "../greycat-analyzer-core" }
dashmap = "6.1.0"
log = "0.4.27"
ropey = "1.6.1"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde = "1.0.219"
serde_json = "1.0.140"
ctrlc = "3.4.7"
crossbeam-channel = "0.5.15"
