[package]
name = "greycat-analyzer-ls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-core = { path = "../greycat-analyzer-core", version = "0.1.0" }
greycat-analyzer-syntax = { path = "../greycat-analyzer-syntax", version = "0.1.0" }
greycat-analyzer-hir = { path = "../greycat-analyzer-hir", version = "0.1.0" }
greycat-analyzer-analysis = { path = "../greycat-analyzer-analysis", version = "0.1.0" }
greycat-analyzer-types = { path = "../greycat-analyzer-types", version = "0.1.0" }
greycat-analyzer-fmt = { path = "../greycat-analyzer-fmt", version = "0.1.0" }

dashmap = "6.1.0"
log = "0.4.27"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde = "1.0.219"
serde_json = "1.0.140"
ctrlc = "3.4.7"
crossbeam-channel = "0.5.15"
