[package]
name = "greycat-analyzer-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-analysis.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-fmt.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-syntax.workspace = true
greycat-analyzer-types.workspace = true

crossbeam-channel.workspace = true
ctrlc.workspace = true
dashmap.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
