[package]
name = "greycat-analyzer-syntax"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-greycat = { path = "../vendor/tree-sitter-greycat" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
