[package]
name = "greycat-analyzer-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-greycat = { path = "../tree-sitter-greycat" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
