[package]
name = "greycat-analyzer-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-hir.workspace = true
greycat-analyzer-core.workspace = true
smol_str.workspace = true
