[package]
name = "greycat-analyzer-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
greycat-analyzer-analysis.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-fmt.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-syntax.workspace = true
greycat-analyzer-types.workspace = true

serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]