[package]
name = "greycat-analyzer-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Playground-only debug dumpers (CST / HIR / tokens / types pipelines).
# Enabled by `playground/scripts/build-wasm.sh`; the published
# `@greycat/analyzer` package builds with the feature OFF and ships only
# the `Project` handle + IDE ADTs.
playground = []

[dependencies]
greycat-analyzer-analysis = { workspace = true, features = ["wasm"] }
greycat-analyzer-core.workspace = true
greycat-analyzer-fmt.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-syntax.workspace = true

console_error_panic_hook = "0.1"
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
