[package]
name = "greycat-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-analysis.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-fmt.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-server.workspace = true
greycat-analyzer-syntax.workspace = true

clap.workspace = true
env_logger.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
