[package]
name = "greycat-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# P26 — exploration branch.
# When enabled, propagates rayon-based parallelism through the analysis
# crate (parallel HIR lowering, typed-lint pass, resolver) and the CLI's
# per-doc diagnostic hydration loop. Off by default — the
# bench-lint.sh script builds both flavours side-by-side.
parallel = ["greycat-analyzer-analysis/parallel", "dep:rayon"]

[dependencies]
greycat-analyzer-analysis.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-fmt.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-server.workspace = true
greycat-analyzer-syntax.workspace = true
greycat-analyzer-types.workspace = true

clap.workspace = true
env_logger.workspace = true
miette.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
similar.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json.workspace = true
