[package]
name = "greycat-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
greycat-analyzer-analysis.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-fmt.workspace = true
greycat-analyzer-hir.workspace = true
greycat-analyzer-server.workspace = true
greycat-analyzer-syntax.workspace = true

# clap trimmed: drops `color` (→ anstream + anstyle in help output) and
# `suggestions` (→ strsim for did-you-mean typo hints). Keeps `help`,
# `usage`, `error-context`, `std`, `derive` — i.e. `--help` and clear
# error messages still work, just without ANSI color or typo suggestions.
clap = { version = "4.5.38", default-features = false, features = [
  "std",
  "help",
  "usage",
  "error-context",
  "derive",
] }
# env_logger trimmed: drops `humantime` (→ jiff), `regex` (→ regex+aho-corasick),
# `auto-color` (→ anstream+anstyle). Keeps RUST_LOG parsing + stderr output;
# loses log-line timestamps, regex filter expressions, and ANSI coloring of log
# lines. The lint binary never emits log lines itself — the analysis crates do,
# sparsely — so this trade is invisible in normal use.
env_logger = { version = "0.11.8", default-features = false }
# miette trimmed: keeps `fancy-no-backtrace` (the full snippet+caret renderer,
# color autodetect, terminal-width wrap, hyperlinks); drops only the backtrace
# machinery (`backtrace` → addr2line + object + gimli + miniz_oxide +
# rustc-demangle + backtrace-ext). We never capture backtraces into miette
# reports, so this is a pure win.
miette = { version = "7", default-features = false, features = ["fancy-no-backtrace"] }
serde.workspace = true
serde_json.workspace = true
similar.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json.workspace = true
