[package]
name = "greycat-analyzer-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Opt-in: enables `#[wasm_bindgen]` derives on the analysis-side
# IDE ADTs (hover / diagnostic / completion / ...) so they can be
# re-exported by `greycat-analyzer-wasm`. Off by default — native
# builds (CLI, LSP server) skip the dep entirely.
wasm = ["dep:wasm-bindgen"]

[dependencies]
greycat-analyzer-hir.workspace = true
greycat-analyzer-core.workspace = true
greycat-analyzer-syntax.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
web-time.workspace = true
wasm-bindgen = { workspace = true, optional = true }

# P27.1 — rayon is unconditional on native targets and absent on wasm.
# `wasm32-unknown-unknown` doesn't have `std::thread::spawn` without
# wasm-bindgen-rayon (cross-origin-isolation headers etc.), and the
# playground doesn't enable that. The `parallel` shim module dispatches
# on `cfg(target_arch = "wasm32")`; rayon never gets called from the
# wasm side, so it doesn't need to be present in the wasm dep tree.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[dev-dependencies]
greycat-analyzer-syntax.workspace = true
