[package]
name = "greycat-analyzer-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
tree-sitter.workspace = true
tree-sitter-greycat.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
